<resources>
    <string name="app_name">Safety</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sosMsg">In case of emergency, keep telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="guardMsg">Open when you are on a potentially dangerous journey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>