<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_16d"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_16s"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:cardBackgroundColor="@color/pink_light"
        android:layout_margin="@dimen/dim_16d"
        app:cardCornerRadius="@dimen/dim_16d"
        app:cardElevation="@dimen/dim_16d"/>

    <TextView
        android:id="@+id/textSos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textSize="@dimen/dim_24s"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dim_16d"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:elevation="@dimen/dim_16d"/>

    <TextView
        android:id="@+id/sosMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sosMsg"
        app:layout_constraintTop_toBottomOf="@id/textSos"
        android:textColor="@color/white"
        android:elevation="@dimen/dim_16d"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/img_sos"
        android:layout_margin="@dimen/dim_16d"/>

    <ImageView
        android:id="@+id/img_sos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        android:elevation="@dimen/dim_16d"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:layout_margin="@dimen/dim_16d"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/blue_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/dim_16d"
        app:cardBackgroundColor="@color/blue_light"
        app:cardCornerRadius="@dimen/dim_16d"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        tools:layout_editor_absoluteX="-20dp"
        app:cardElevation="@dimen/dim_16d"/>

    <TextView
        android:id="@+id/textGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:textSize="@dimen/dim_24s"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dim_16d"
        app:layout_constraintTop_toTopOf="@id/blue_card"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        android:elevation="@dimen/dim_16d"/>

    <TextView
        android:id="@+id/guardMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardMsg"
        app:layout_constraintTop_toBottomOf="@id/textGuard"
        android:textColor="@color/white"
        android:elevation="@dimen/dim_16d"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintEnd_toStartOf="@id/img_guard"
        android:layout_margin="@dimen/dim_16d"/>

    <ImageView
        android:id="@+id/img_guard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintEnd_toEndOf="@id/blue_card"
        app:layout_constraintTop_toTopOf="@id/blue_card"
        android:elevation="@dimen/dim_16d"
        app:layout_constraintBottom_toBottomOf="@id/blue_card"
        android:layout_margin="@dimen/dim_16d" />




</androidx.constraintlayout.widget.ConstraintLayout>